# mathcha2tikz

./: CLI.py  LICENSE  README.md  __init__.py  __main__.py  commands.py  menus.py  pyproject.toml  requirements-dev.txt  requirements-maintenance.txt  requirements.txt  setup.py
archive/cache/: regex_cache.py  regex_patterns.py
archive/lexer/: __init__.py  ast.py  lexer.py  printer.py  visitor.py
archive/maintenace/: error_handling.py  formatter.py  log_handling.py  maintenance_manager.py  optimization.py  performance.py
core/: __init__.py  converter.py  detector.py  exceptions.py  main.py  output_modes.py  parser.py  postprocessing.py  processor.py  renderer.py  shape_payload.py  shape_registry.py  templates.py
docs/: DRY.md  WORKFLOW.md  examples.md  nodes.md  todo.md
mathcha2tikz/: __init__.py  cli.py  cli_io.py  commands.py  io.py  menus.py
mathcha2tikz/utils/: __init__.py  id_utils.py  style_utils.py
modules/: __init__.py
modules/nodes/: node_parser.py  node_placer.py
modules/shapes/: __init__.py
utils/: __init__.py  id_utils.py  style_utils.py
utils/arrows/: normalize.py  types.py
utils/geometry/: __init__.py  arrows_processor.py  base_geometry.py  bezier_analysis.py  point_path_operations.py  shared_arrow_logic copy.py  vector_analysis.py
utils/maintenance/: get_color.py
utils/nodes/: __init__.py  anchors.py  positioning.py  search.py  types.py
utils/parsing/: base_parser.py  parser_utils.py
utils/processing/: base_shape_processor.py
utils/rendering/: base_renderer.py  path_builder.py
utils/shapes/: styles.py  types.py
(+38 files in other folders)
